# bosdyn-hospital-bot

./: README.md
02-049412-001-A00 DECON GUARD/: 02-049405-002-A02 DECON GUARD PANEL B.STL  02-049405-003-A02 DECON GUARD PANEL A.STL  02-049405-004-A02 DECON GUARD FRONT.STL  02-049405-005-A02 DECON GUARD REAR.STL  02-049405-006-A02 DECON GUARD HDPE SHEET.STL  02-049405-007-A02 DECON GUARD SPAR.STL  02-049405-008-A02 DECON GUARD HINGE.STL
02-049531-001-A00 UTM ASSEMBLY/: 02-049419-002-A03 UTM BASE.STL  02-049419-003-A04 UTM ARM.STL  02-049419-004-A04 UTM HUB.STL  02-049419-006-A03 UTM HUB COVER.STL  02-049531-001-A00 UTM ASSEMBLY .step  02-049531-001-A00 UTM ASSEMBLY EXPLODED.step
drspot/: README.md  setup.py
drspot/nodes/: ir_face_tracker  respiratory_rate  skin_temperature
drspot/scripts/config/etc/ros/: env.sh
drspot/scripts/config/etc/systemd/system/: roscore.service  vncserver@.service
drspot/scripts/config/home/spot/.vnc/: xstartup
drspot/scripts/config/home/spot/Desktop/: DrSpot ROS GUI.desktop
maskor_gige_cam/: INSTALL.txt  README.md
optris_drivers/: CMakeLists.txt  LICENSE  libirimager.yaml  package.xml
optris_drivers/config/: generic.xml
optris_drivers/msg/: Temperature.msg
optris_drivers/src/: OptrisImager.h  optris_binary_image_node.cpp  optris_colorconvert_node.cpp  optris_imager_node.cpp
optris_drivers/srv/: TemperatureRange.srv
vitals_collection/drspot/: CMakeLists.txt  README.md  package.xml  rqt_vitals_readout_plugin.xml  setup.py
vitals_collection/drspot/docs/: pulse_signature_vector.xlsx
vitals_collection/drspot/launch/: vitals.launch
vitals_collection/drspot/nodes/: heart_rate_spo2  heart_rate_spo2_standalone  ir_face_tracker  mode_manager  multi_tracker_with_hr_spo2  multichrome_face_tracker  multichrome_face_tracker_standalone  respiratory_rate  rgb_tracker_with_hr_spo2  skin_temperature  thermal_reference
vitals_collection/drspot/resources/: VitalsReadout.ui  live_drspot.perspective
vitals_collection/drspot/scripts/: dev_tun0.sh  monitor_reference.py  rqt_vitals_readout  spotcore_tun0.sh
vitals_collection/drspot/scripts/analysis/: freq.gnuplot  plot_freq.bash  plot_region.bash  plot_spo2.bash  region.gnuplot  spo2.gnuplot
vitals_collection/drspot/scripts/config/etc/modprobe.d/: uvcvideo.conf
vitals_collection/drspot/scripts/config/etc/ros/: env.sh
vitals_collection/drspot/scripts/config/etc/ros/params/: spinnaker_sdk_camera_driver_params.yaml  thermal_reference_params.yaml
vitals_collection/drspot/scripts/config/etc/systemd/system/: roslaunch.service
vitals_collection/drspot/scripts/config/etc/udev/rules.d/: 99-arduino.rules
vitals_collection/drspot/scripts/config/home/spot/Desktop/: DrSpot Start Log.desktop  DrSpot Stop Log.desktop  DrSpot Vitals Readout GUI.desktop  Troubleshoot DrSpot.desktop
vitals_collection/drspot/scripts/config/home/spot/bare_bosdyn-hospital-bot.git/hooks/: post-update
vitals_collection/drspot/scripts/config/usr/sbin/: roslaunch
vitals_collection/drspot/src/drspot/: __init__.py
vitals_collection/drspot/src/drspot/config/: multichrome_config.py  rgb_config.py
vitals_collection/drspot/src/drspot/rqt/: vitals_readout.py
vitals_collection/drspot/src/drspot/utils/: tracking.py  transport.py
vitals_collection/drspot/src/drspot/vitals/: heart_rate_spo2.py  multichrome_face_tracker.py
vitals_collection/image_view2/: CHANGELOG.rst  CMakeLists.txt  README.md  image_view2.cpp  image_view2.h  image_view2_node.cpp  mainpage.dox  package.xml  points_rectangle_extractor.cpp  scale_interaction.py  test-imageview2.l  test-toolframe.l
vitals_collection/image_view2/cfg/: ImageView2.cfg
vitals_collection/image_view2/msg/: ImageMarker2.msg  MouseEvent.msg  PointArrayStamped.msg
vitals_collection/image_view2/srv/: ChangeMode.srv
vitals_collection/image_view2/test/: publish_lena.py  publish_mouse_event.py  rectangle_mouse_event.launch
vitals_collection/maskor_gige_cam/: .gitignore  .travis.yml  CMakeLists.txt  autoinstall_eBUS_SDK.exp  package.xml
vitals_collection/maskor_gige_cam/cfg/: Flir.cfg
vitals_collection/maskor_gige_cam/include/maskor_gige_cam/: maskor_flir_cam_node.h  maskor_gige_cam.h
vitals_collection/maskor_gige_cam/launch/: a325sc_driver.launch
vitals_collection/maskor_gige_cam/src/: maskor_flir_cam_node.cpp  maskor_gige_cam.cpp
vitals_collection/optris_drivers/: README.md  libirimager.rdmanifest
vitals_collection/optris_drivers/cfg/: Threshold.cfg
vitals_collection/optris_drivers/launch/: optris_drivers.launch
vitals_collection/optris_drivers/msg/: Flag.msg
vitals_collection/optris_drivers/src/: OptrisImager.cpp  OptrisImager.h
vitals_collection/optris_drivers/srv/: AutoFlag.srv  Palette.srv
vitals_collection/spinnaker_sdk_camera_driver/: CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
vitals_collection/spinnaker_sdk_camera_driver/cfg/: debug_console.conf  spinnaker_cam.cfg  std_console.conf
vitals_collection/spinnaker_sdk_camera_driver/cmake/: FindLibUnwind.cmake
vitals_collection/spinnaker_sdk_camera_driver/include/spinnaker_sdk_camera_driver/: camera.h  capture.h  capture_nodelet.h  serialization.h  std_include.h  subscriber_nodelet.h  utils.h
vitals_collection/spinnaker_sdk_camera_driver/launch/: acquisition.launch  acquisition_node.launch  multiple_nodelet_example.launch  nodelet_subscriber_example.launch
vitals_collection/spinnaker_sdk_camera_driver/msg/: SpinnakerImageNames.msg
vitals_collection/spinnaker_sdk_camera_driver/params/: multi-cam_example.yaml  stereo_camera_example.yaml  test_params.yaml
vitals_collection/spinnaker_sdk_camera_driver/src/: acquisition_node.cpp  acquisition_nodelet.cpp  camera.cpp  capture.cpp  capture_nodelet.cpp  nodelet_test.cpp  subscriber_node.cpp  subscriber_nodelet.cpp  utils.cpp
