<?xml version="1.0"?>
<package format="2">
  <name>drspot</name>
  <version>0.0.1</version>
  <description>ROS tools for remote vital signs measurement from multispectral imagery</description>
  <maintainer email="gmerewether@bostondynamics.com">Gene Merewether</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend version_gte="0.2.12">rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/rqt_vitals_readout_plugin.xml"/>
  </export>
</package>
